      identify grids; they no longer generate 'more than one grid named "x"'
      warnings when there are multiple grids of the same name in a file
      (for files written starting with this version of the OpenVDB library).
    - Fixed a bug in Tree::ValueOffIter that could cause depth-bounded
      iterators to return incorrect values.
    - Fixed memory leaks in RootNode::topologyDifference() and
      RootNode::topologyIntersection().
    - Fixed a memory leak in io::Queue when the queue was full and
      a write task could not be added within the timeout interval.
    - Fixed a potential division by zero crash in tools::compDiv()
      with integer-valued grids.
    - Fixed kernel normalization in tools::Filter so that it is correct
      for integer-valued grids.
    - Fixed a bug in LeafNode::Buffer::getValue() whereby Visual C++
      would return a reference to a temporary.
      [Contributed by SESI]
    - Fixed a bug in tools::ParticlesToLevelSet related to attribute transfer
      when leaf nodes are produced without active values.
    - Added util/CpuTimer.h and removed the more simplistic CpuTimer
      from unittest/util.h.
    - Eliminated the use of getopt() for command-line argument parsing
      in vdb_test.
    - openvdb::initialize() now properly initializes log4cplus if it is
      enabled, eliminating "No appenders could be found" errors.
    - Fixed a bug in the QuantizedUnitVec::pack() method that caused
      quantization artifacts.
    - Added convenience class tools::AlphaMask to tools/Interpolation.h
    - Added constructors and methods to both math::RandInt and math::Rand01
      to set and reset the random seed value.
    - Added convenience methods for transforming bounding boxes to
      math::Transform.
    - vdb_view is now compatible with both GLFW 2 and GLFW 3.
    - Made many small changes to address type conversion and other warnings
      reported by newer compilers like GCC 4.8 and ICC 14.